@@ -3,7 +3,6 @@ package ru.job4j.collection;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -15,7 +14,7 @@ public class ConvertListTest {
         list.add(new int[]{1});
         list.add(new int[]{2, 3});
         List<Integer> result = ConvertList.convert(list);
-        List<Integer> expected = Arrays.asList(1, 2, 3);
+        List<Integer> expected = List.of(1, 2, 3);
         assertThat(result).containsAll(expected);
     }
 }
